# DS

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  SPEC.md  dev.ps1  docker-compose.prod.yml  docker-compose.yml
docs/adr/: 0001-architecture.md
infra/db/: schema.sql
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/grafana/provisioning/dashboards/json/: fluxtape-ingestion.json  fluxtape-processor.json
infra/grafana/provisioning/datasources/: datasource.yml
infra/prometheus/: prometheus.yml
services/: Dockerfile.go
services/api/: fly.toml  go.mod  go.sum  hub.go  main.go
services/bar-sink/: fly.toml  go.mod  go.sum  main.go
services/ingestion/: Cargo.toml  Dockerfile  fly.toml
services/ingestion/src/: coinbase.rs  main.rs  producer.rs  trade.rs
services/processor/: fly.toml  go.mod  go.sum  main.go  metrics.go  window.go
services/trade-sink/: fly.toml  go.mod  main.go
site/: index.html  styles.css
tools/recorder/: package.json  record.js
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  wrangler.toml
web/src/: App.tsx  Health.tsx  Live.tsx  api.ts
