[package]
name = "ingestion"
version = "0.1.0"
edition = "2021"
description = "FluxTape ingestion service: Coinbase trade feed -> Redpanda"

[dependencies]
# Async runtime (I/O-bound service: many concurrent waits, few threads)
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
# WebSocket client. native-tls uses Windows SChannel — no OpenSSL needed.
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
# Kafka producer. default-features=false drops ssl/sasl/libz so the bundled
# librdkafka builds cleanly on Windows with just CMake + MSVC (plaintext local).
rdkafka = { version = "0.36", default-features = false, features = ["cmake-build", "tokio"] }
# Load .env for local dev convenience (KAFKA_BROKERS, etc.)
dotenvy = "0.15"
# (De)serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Time parsing (Coinbase sends RFC3339 timestamps)
chrono = "0.4"
# Metrics: facade + Prometheus exporter (serves /metrics on its own HTTP port)
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
# Randomness for reconnect jitter
rand = "0.8"
# Errors + logging
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
